# webserver

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  coverage.sh  ctest.sh  run.sh
configs/: docker.conf  local_config.conf  production_config.conf
docker/: README.md  base.Dockerfile  build.Dockerfile  build_test_docker.sh  cloudbuild.yaml  cloudbuild_frontend_redeploy.yaml  coverage.Dockerfile  deploy.Dockerfile  frontend_redeploy.Dockerfile  local_dockerfile_test.sh  redeploy_test_docker.sh  run_test_docker.sh  test_coverage.Dockerfile  test_coverage_extract.sh
docs/: product_requirements_document.md  technical_design_proposal.md
files_to_serve/: 404.html
frontend/: .eslintrc.cjs  .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/production_build/: index.html
frontend/production_build/assets/: index-2fs2D8ur.js  index-Bao84SuA.css
frontend/public/notebooks/: ECE_C147_Final_Project_Pure_CNNs.html
frontend/src/: App.css  App.tsx
frontend/src/assets/earth-impact-simulator/: fragment.js  simulation.js
frontend/src/assets/earth-impact-simulator/dependencies/: common.js  tiny-graphics-widgets.js  tiny-graphics.js
frontend/src/components/: Footer.css  Footer.tsx  Header.css  Header.tsx  NavButton.tsx  ProjectCard.css  ProjectCard.tsx  firebaseConfig.ts
frontend/src/pages/: Home.css  Home.tsx  NoPage.tsx  Projects.css  Projects.tsx
frontend/src/pages/projects/: CPPTest.css  CPPTest.tsx  EEGNotebook.css  EEGNotebook.tsx  EarthImpactSimulator.css  EarthImpactSimulator.tsx  NotebookViewer.css  NotebookViewer.tsx  SimInterface.css  SimInterface.tsx
include/: analytics.h  file_request_handler.h  health_request_handler.h  log.h  nginx_config.h  nginx_config_location_block.h  nginx_config_parser.h  nginx_config_server_block.h  post_request_handler.h  registry.h  request_handler_interface.h  request_handler_registry.h  server.h  session.h
include/server/: http_server.h  https_server.h  server.h
include/session/: http_session.h  https_session.h  session.h  session_base.h
include/typedefs/: http.h  socket.h
react_frontend/: index.html  package-lock.json  package.json
react_frontend/src/: App.tsx
react_frontend/src/components/: Footer.css  Footer.tsx  Header.css
react_frontend/src/pages/: Home.tsx  NoPage.tsx  Projects.tsx  Resume.tsx
simulations/: cpu-simulator
src/: analytics.cc  file_request_handler.cc  health_request_handler.cc  log.cc  nginx_config.cc  nginx_config_parser.cc  nginx_config_server_block.cc  post_request_handler.cc  registry.cc  request_handler_registry.cc  server.cc  server_main.cc  session.cc
src/server/: http_server.cc  https_server.cc  server.cc
src/session/: https_session.cc  session.cc  session_base.cc
tests/certs/: RootCA.crt  RootCA.key  RootCA.srl  localhost.crt  localhost.key
tests/inputs/: inaccessible  large.html  no_permission.html  octet_stream  small.html
tests/inputs/configs/: args_in_http.conf  args_in_http_invalid.conf  args_in_location_invalid.conf  args_in_main.conf  args_in_main_invalid.conf  args_location_overrides.conf  args_port_decimal_invalid.conf  args_port_negative_invalid.conf  args_port_non_integer_invalid.conf  args_port_string_invalid.conf  args_port_too_large_invalid.conf  args_ssl_arg_invalid.conf  args_ssl_good.conf  args_ssl_in_non_ssl_invalid.conf  args_ssl_missing_invalid.conf  args_unimplemented.conf  args_unknown_in_server_invalid.conf  basic_inaccessible.conf  basic_no_index.conf  basic_no_index_invalid.conf  basic_no_port.conf  basic_no_root.conf  basic_no_root_invalid.conf  comment_good.conf  comment_in_blockend.conf  comment_in_blockend_invalid.conf  comment_in_blockstart.conf  comment_in_blockstart_invalid.conf  comment_in_index.conf  comment_in_index_invalid.conf  comment_in_listen.conf  comment_in_listen_invalid.conf  comment_in_location.conf  comment_in_location_invalid.conf  comment_in_root.conf  comment_in_root_invalid.conf  comment_in_tryfiles.conf  comment_in_tryfiles_invalid.conf  context_invalid_switch.conf  context_switch_invalid.conf  (+32 more)
tests/inputs/simulations/: cpu-simulator
tests/integration/: integration_tests.sh
tests/libs/: file_request_handler_test.cc  log_test.cc  nginx_config_parser_test.cc  post_request_handler_test.cc  registry_test.cc
tests/nc/: close.txt
tests/nc/inputs/: content_length_non_numeric_get.txt  content_length_non_numeric_post.txt  excessive_payload_get.txt  excessive_payload_post.txt  invalid_method.txt  leave_dir.txt  leave_dir_2.txt  leave_dir_3.txt  test.txt
tests/nc/outputs/: content_length_non_numeric_get.txt  content_length_non_numeric_post.txt  excessive_payload_get.txt  redirect_http_to_https.txt  redirect_same_scheme.txt
